--- a/index.html
+++ b/index.html
@@ -124,9 +124,12 @@
 
 <input type="text" id="timezone" placeholder="Time Zone (e.g. IST, GMT)" required>
 
+<label>Preferred Date</label>
 <input type="date" id="classDate" required>
 
+<label>Preferred Time</label>
 <input type="time" id="classTime" required>
+
 
 <button type="button" class="btn" onclick="sendRequest()">Submit</button>
 
