--- a/index.html
+++ b/index.html
@@ -114,11 +114,34 @@
 
    <input type="text" id="studentName" placeholder="Student Name" required>
 
-<input type="number" id="studentClass" placeholder="Class (1–10)" required>
+<input 
+  type="number" 
+  id="studentClass" 
+  placeholder="Class (1–10)" 
+  min="1" 
+  max="10" 
+  required
+>
 
-<input type="email" id="parentEmail" placeholder="Parent Email ID" required>
 
-<input type="tel" id="parentPhone" placeholder="Parent Mobile Number" required>
+<input
+  type="email"
+  id="parentEmail"
+  placeholder="Parent Email ID"
+  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+  required
+>
+
+
+<input
+  type="tel"
+  id="parentnumber"
+  placeholder="Parent Mobile Number"
+  maxlength="10"
+  pattern="[0-9]{10}"
+  inputmode="numeric"
+  required
+>
 
 <input type="text" id="country" placeholder="Country" required>
 
@@ -166,6 +189,28 @@
 
     // Random opacity
     tool.style.opacity = (Math.random() * 0.4 + 0.5).toFixed(2);
+  });
+</script>
+<script>
+  // Class limit safety
+  document.getElementById("studentClass").addEventListener("input", function () {
+    if (this.value > 10) {
+      this.value = 10;
+    }
+  });
+
+  // Phone number: numbers only + 10 digits
+  document.getElementById("parentPhone").addEventListener("input", function () {
+    this.value = this.value.replace(/[^0-9]/g, "");
+    if (this.value.length > 10) {
+      this.value = this.value.slice(0, 10);
+    }
+  });
+</script>
+<script>
+  // Email validation safety
+  document.getElementById("parentEmail").addEventListener("input", function () {
+    this.value = this.value.toLowerCase();
   });
 </script>
 
