--- a/index.html
+++ b/index.html
@@ -8,62 +8,60 @@
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <h2 class="logo">Math Made Easy</h2>
-    <ul class="nav-links">
-      <li><a href="#about">About</a></li>
-      <li><a href="#classes">Classes</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#testimonials">Results</a></li>
-      <li><a href="#syllabus">Syllabus</a></li>
-      
-      <li><button class="btn" onclick="openForm()">Free Demo</button></li>
-    </ul>
-  </nav>
+<!-- Navbar -->
+<nav class="navbar">
+  <h2 class="logo">Math Made Easy</h2>
+  <ul class="nav-links">
+    <li><a href="#about">About</a></li>
+    <li><a href="#classes">Classes</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#testimonials">Results</a></li>
+    <li><a href="#syllabus">Syllabus</a></li>
+    <li><button class="btn" onclick="openForm()">Free Demo</button></li>
+  </ul>
+</nav>
 
-  <!-- Hero Section -->
-  <header class="hero">
-    <h1>Making Maths Simple & Fun</h1>
-    <p>Expert Maths tuition for Classes 1 to 10</p>
-    <button class="btn big" onclick="openForm()">Book Free Demo Class</button>
-  </header>
+<!-- Hero -->
+<header class="hero">
+  <h1 class="reveal-text">Making Maths Simple & Fun</h1>
+  <p>Expert Maths tuition for Classes 1 to 10</p>
+  <button class="btn big" onclick="openForm()">Book Free Demo Class</button>
+</header>
 
-  <!-- About -->
-  <section id="about" class="section">
-    <h2>Why Math Made Easy?</h2>
-    <p>
-      We focus on building strong basics, clear concepts, and confidence in maths.
-      Personal attention for every student.
-    </p>
-  </section>
+<!-- About -->
+<section id="about" class="section reveal">
+  <h2>Why Math Made Easy?</h2>
+  <p>
+    We focus on building strong basics, clear concepts, and confidence in maths.
+    Personal attention for every student.
+  </p>
+</section>
 
-  <!-- Classes -->
-  <section id="classes" class="section gray">
-    <h2>Classes We Teach</h2>
-    <div class="cards">
-      <div class="card">Class 1 – 3<br><small>Basics & Foundation</small></div>
-      <div class="card">Class 4 – 6<br><small>Concept Building</small></div>
-      <div class="card">Class 7 – 8<br><small>Problem Solving</small></div>
-      <div class="card">Class 9 – 10<br><small>Board Exam Focus</small></div>
-    </div>
-  </section>
-  <section id="testimonials" class="section">
+<!-- Classes -->
+<section id="classes" class="section gray reveal">
+  <h2>Classes We Teach</h2>
+  <div class="cards">
+    <div class="card">Class 1 – 3<br><small>Basics & Foundation</small></div>
+    <div class="card">Class 4 – 6<br><small>Concept Building</small></div>
+    <div class="card">Class 7 – 8<br><small>Problem Solving</small></div>
+    <div class="card">Class 9 – 10<br><small>Board Exam Focus</small></div>
+  </div>
+</section>
+
+<!-- Testimonials -->
+<section id="testimonials" class="section reveal">
   <h2>Student Results & Testimonials</h2>
-
   <div class="cards">
     <div class="card">
       <h3>95% in Maths</h3>
       <p>Class 10 Student</p>
       <small>“Math Made Easy helped me understand concepts clearly.”</small>
     </div>
-
     <div class="card">
       <h3>Top Rank in Class</h3>
       <p>Class 8 Student</p>
       <small>“Maths is now my favorite subject!”</small>
     </div>
-
     <div class="card">
       <h3>Strong Basics</h3>
       <p>Class 4 Student</p>
@@ -71,25 +69,23 @@
     </div>
   </div>
 </section>
-<section id="syllabus" class="section gray">
-  <h2>Class-wise Maths Syllabus</h2>
 
+<!-- Syllabus -->
+<section id="syllabus" class="section gray reveal">
+  <h2>Class-wise Maths Syllabus</h2>
   <div class="cards">
     <div class="card">
       <h3>Class 1 – 3</h3>
       <small>Addition, Subtraction, Tables, Shapes</small>
     </div>
-
     <div class="card">
       <h3>Class 4 – 6</h3>
       <small>Fractions, Decimals, Geometry, Word Problems</small>
     </div>
-
     <div class="card">
       <h3>Class 7 – 8</h3>
       <small>Algebra, Linear Equations, Mensuration</small>
     </div>
-
     <div class="card">
       <h3>Class 9 – 10</h3>
       <small>Polynomials, Trigonometry, Geometry, Statistics</small>
@@ -97,87 +93,108 @@
   </div>
 </section>
 
+<!-- Contact -->
+<section id="contact" class="section reveal">
+  <h2>Contact Us</h2>
+  <p>📧 Email: emailjesima@gmail.com</p>
+  <p>📞 Phone: +91 88921 93291</p>
+</section>
 
-
-  <!-- Contact -->
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <p>📧 Email: emailjesima@gmail.com</p>
-    <p>📞 Phone: +91 88921 93291</p>
-  </section>
-
-  <!-- Demo Form -->
+<!-- Demo Form Popup -->
 <div id="formPopup" class="popup">
   <div class="popup-content">
     <span class="close" onclick="closeForm()">×</span>
     <h3>Book Free Demo Class</h3>
 
-   <input type="text" id="studentName" placeholder="Student Name" required>
+    <input type="text" id="studentName" placeholder="Student Name" required>
+    <input type="number" id="studentClass" placeholder="Class (1–10)" min="1" max="10" required>
+    <input type="email" id="parentEmail" placeholder="Parent Email ID" required>
+    <input type="tel" id="parentPhone" placeholder="Parent Mobile Number" required>
+    <input type="text" id="country" placeholder="Country" required>
+    <input type="text" id="timezone" placeholder="Time Zone (e.g. IST, GMT)" required>
 
-<input 
-  type="number" 
-  id="studentClass" 
-  placeholder="Class (1–10)" 
-  min="1" 
-  max="10" 
-  required
->
+    <label>Preferred Date</label>
+    <input type="date" id="classDate" required>
 
+    <label>Preferred Time</label>
+    <input type="time" id="classTime" required>
 
-<input type="email" id="parentEmail" placeholder="Parent Email ID" required>
-
-<input type="tel" id="parentPhone" placeholder="Parent Mobile Number" required>
-
-<input type="text" id="country" placeholder="Country" required>
-
-<input type="text" id="timezone" placeholder="Time Zone (e.g. IST, GMT)" required>
-
-<label>Preferred Date</label>
-<input type="date" id="classDate" required>
-
-<label>Preferred Time</label>
-<input type="time" id="classTime" required>
-
-
-<button type="button" class="btn" onclick="sendRequest()">Submit</button>
-
-
+    <button type="button" class="btn" onclick="sendRequest()">Submit</button>
   </div>
 </div>
 
-
-
-  <script type="module" src="script.js"></script>
-  <div class="background-tools">
+<!-- Background tools -->
+<div class="background-tools">
   <div class="tool ruler"></div>
   <div class="tool triangle"></div>
   <div class="tool compass"></div>
   <div class="tool protractor"></div>
 </div>
+
 <div class="float-tool ruler"></div>
 <div class="float-tool compass"></div>
 <div class="float-tool protractor"></div>
 
+<div class="geo-bg">
+  <div class="geo-shape geo-circle geo-1"></div>
+  <div class="geo-shape geo-square geo-2"></div>
+  <div class="geo-shape geo-triangle geo-3"></div>
+  <div class="geo-shape geo-circle geo-4"></div>
+  <div class="geo-shape geo-square geo-5"></div>
+</div>
+
+<!-- Float tools randomizer -->
 <script>
-  document.querySelectorAll(".float-tool").forEach(tool => {
-    // Random start position
-    tool.style.top = Math.random() * 90 + "%";
-    tool.style.left = Math.random() * 90 + "%";
-
-    // Random animation speed
-    tool.style.animationDuration =
-      Math.floor(Math.random() * 25 + 15) + "s";
-
-    // Random animation delay
-    tool.style.animationDelay =
-      Math.floor(Math.random() * 10) + "s";
-
-    // Random opacity
-    tool.style.opacity = (Math.random() * 0.4 + 0.5).toFixed(2);
-  });
+document.querySelectorAll(".float-tool").forEach(tool => {
+  tool.style.top = Math.random() * 90 + "%";
+  tool.style.left = Math.random() * 90 + "%";
+  tool.style.animationDuration = Math.floor(Math.random() * 25 + 15) + "s";
+  tool.style.animationDelay = Math.floor(Math.random() * 10) + "s";
+  tool.style.opacity = (Math.random() * 0.4 + 0.5).toFixed(2);
+});
 </script>
 
+<!-- Reveal observer (FIXED) -->
+<script>
+const revealElements = document.querySelectorAll(".reveal");
 
+const revealObserver = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add("show");
+    }
+  });
+}, { threshold: 0.2 });
 
+revealElements.forEach(el => revealObserver.observe(el));
+</script>
+
+<!-- Text reveal (FIXED – no variable conflict) -->
+<script>
+document.querySelectorAll(".reveal-text").forEach(el => {
+  const text = el.textContent;
+  el.textContent = "";
+  [...text].forEach((char, i) => {
+    const span = document.createElement("span");
+    span.textContent = char === " " ? "\u00A0" : char;
+    span.style.transitionDelay = `${i * 0.03}s`;
+    el.appendChild(span);
+  });
+});
+
+const textObserver = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add("active");
+    }
+  });
+}, { threshold: 0.3 });
+
+document.querySelectorAll(".reveal-text").forEach(el => {
+  textObserver.observe(el);
+});
+</script>
+
+<script type="module" src="script.js"></script>
 </body>
 </html>
