--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Math Made Easy</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- FLOATING MATH BACKGROUND -->
+<div class="math-bg"></div>
 
-<!-- Navbar -->
+
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar">
   <h2 class="logo">Math Made Easy</h2>
   <ul class="nav-links">
@@ -21,180 +24,147 @@
   </ul>
 </nav>
 
-<!-- Hero -->
+<!-- ================= HERO ================= -->
 <header class="hero">
-  <h1 class="reveal-text">Making Maths Simple & Fun</h1>
-  <p>Expert Maths tuition for Classes 1 to 10</p>
-  <button class="btn big" onclick="openForm()">Book Free Demo Class</button>
+  <div class="hero-overlay">
+    <h1 class="scramble">Making Maths Simple & Fun</h1>
+    <p class="scramble">Expert Maths tuition for Classes 1 to 10</p>
+    <button class="btn big" onclick="openForm()">Book Free Demo Class</button>
+  </div>
 </header>
 
-<!-- About -->
-<section id="about" class="section reveal">
-  <h2>Why Math Made Easy?</h2>
-  <p>
-    We focus on building strong basics, clear concepts, and confidence in maths.
+
+<!-- ================= ABOUT ================= -->
+<section id="about" class="section">
+  <h2 class="scramble">Why Math Made Easy?</h2>
+  <p class="scramble">
+    We focus on strong basics, clear concepts, and confidence in maths.
     Personal attention for every student.
   </p>
 </section>
 
-<!-- Classes -->
-<section id="classes" class="section gray reveal">
-  <h2>Classes We Teach</h2>
-  <div class="cards">
-    <div class="card">Class 1 – 3<br><small>Basics & Foundation</small></div>
-    <div class="card">Class 4 – 6<br><small>Concept Building</small></div>
-    <div class="card">Class 7 – 8<br><small>Problem Solving</small></div>
-    <div class="card">Class 9 – 10<br><small>Board Exam Focus</small></div>
-  </div>
-</section>
+<!-- ================= CLASSES ================= -->
 
-<!-- Testimonials -->
-<section id="testimonials" class="section reveal">
-  <h2>Student Results & Testimonials</h2>
+  <section id="classes" class="section gray">
+  <h2 class="scramble">Classes We Teach</h2>
+
   <div class="cards">
     <div class="card">
-      <h3>95% in Maths</h3>
-      <p>Class 10 Student</p>
-      <small>“Math Made Easy helped me understand concepts clearly.”</small>
+      <h3 class="scramble">Class 1 – 3</h3>
+      <p class="scramble">Basics & Foundation</p>
     </div>
+
     <div class="card">
-      <h3>Top Rank in Class</h3>
-      <p>Class 8 Student</p>
-      <small>“Maths is now my favorite subject!”</small>
+      <h3 class="scramble">Class 4 – 6</h3>
+      <p class="scramble">Concept Building</p>
     </div>
+
     <div class="card">
-      <h3>Strong Basics</h3>
-      <p>Class 4 Student</p>
-      <small>“My child’s confidence has improved a lot.”</small>
+      <h3 class="scramble">Class 7 – 8</h3>
+      <p class="scramble">Problem Solving</p>
+    </div>
+
+    <div class="card">
+      <h3 class="scramble">Class 9 – 10</h3>
+      <p class="scramble">Board Exam Focus</p>
     </div>
   </div>
 </section>
 
-<!-- Syllabus -->
-<section id="syllabus" class="section gray reveal">
-  <h2>Class-wise Maths Syllabus</h2>
+
+<!-- ================= TESTIMONIALS ================= -->
+<section id="testimonials" class="section">
+  <h2 class="scramble">Student Results & Testimonials</h2>
+
   <div class="cards">
     <div class="card">
-      <h3>Class 1 – 3</h3>
-      <small>Addition, Subtraction, Tables, Shapes</small>
+      <h3 class="scramble">95% in Maths</h3>
+      <p class="scramble">Class 10 Student</p>
+      <small class="scramble">“Concepts are crystal clear now.”</small>
     </div>
+
     <div class="card">
-      <h3>Class 4 – 6</h3>
-      <small>Fractions, Decimals, Geometry, Word Problems</small>
+      <h3 class="scramble">Top Rank</h3>
+      <p class="scramble">Class 8 Student</p>
+      <small class="scramble">“Maths is now my favourite subject!”</small>
     </div>
+
     <div class="card">
-      <h3>Class 7 – 8</h3>
-      <small>Algebra, Linear Equations, Mensuration</small>
-    </div>
-    <div class="card">
-      <h3>Class 9 – 10</h3>
-      <small>Polynomials, Trigonometry, Geometry, Statistics</small>
+      <h3 class="scramble">Strong Basics</h3>
+      <p class="scramble">Class 4 Student</p>
+      <small class="scramble">“Confidence has improved a lot.”</small>
     </div>
   </div>
 </section>
 
-<!-- Contact -->
-<section id="contact" class="section reveal">
+<!-- ================= SYLLABUS ================= -->
+<section id="syllabus" class="section gray">
+  <h2 class="scramble">Class-wise Maths Syllabus</h2>
+
+  <div class="cards">
+    <div class="card">
+      <div class="scramble">Class 1–3</div>
+      <small class="scramble">Addition, Tables, Shapes</small>
+    </div>
+
+    <div class="card">
+      <div class="scramble">Class 4–6</div>
+      <small class="scramble">Fractions, Geometry</small>
+    </div>
+
+    <div class="card">
+      <div class="scramble">Class 7–8</div>
+      <small class="scramble">Algebra, Mensuration</small>
+    </div>
+
+    <div class="card">
+      <div class="scramble">Class 9–10</div>
+      <small class="scramble">Trigonometry, Statistics</small>
+    </div>
+  </div>
+</section>
+
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="section">
   <h2>Contact Us</h2>
   <p>📧 Email: emailjesima@gmail.com</p>
   <p>📞 Phone: +91 88921 93291</p>
 </section>
 
-<!-- Demo Form Popup -->
+<!-- ================= MULTI STEP FORM ================= -->
 <div id="formPopup" class="popup">
   <div class="popup-content">
     <span class="close" onclick="closeForm()">×</span>
     <h3>Book Free Demo Class</h3>
 
-    <input type="text" id="studentName" placeholder="Student Name" required>
-    <input type="number" id="studentClass" placeholder="Class (1–10)" min="1" max="10" required>
-    <input type="email" id="parentEmail" placeholder="Parent Email ID" required>
-    <input type="tel" id="parentPhone" placeholder="Parent Mobile Number" required>
-    <input type="text" id="country" placeholder="Country" required>
-    <input type="text" id="timezone" placeholder="Time Zone (e.g. IST, GMT)" required>
+    <div class="form-step active">
+      <input type="text" id="studentName" placeholder="Student Name">
+      <input type="number" id="studentClass" placeholder="Class (1–10)" min="1" max="10">
+      <button class="btn" onclick="nextStep()">Next ➡</button>
+    </div>
 
-    <label>Preferred Date</label>
-    <input type="date" id="classDate" required>
+    <div class="form-step">
+      <input type="email" id="parentEmail" placeholder="Parent Email ID">
+      <input type="tel" id="parentPhone" placeholder="Parent Mobile Number">
+      <button class="btn outline" onclick="prevStep()">⬅ Back</button>
+      <button class="btn" onclick="nextStep()">Next ➡</button>
+    </div>
 
-    <label>Preferred Time</label>
-    <input type="time" id="classTime" required>
-
-    <button type="button" class="btn" onclick="sendRequest()">Submit</button>
+    <div class="form-step">
+      <input type="text" id="country" placeholder="Country">
+      <input type="text" id="timezone" placeholder="Time Zone (IST)">
+      <label>Preferred Date</label>
+      <input type="date" id="classDate">
+      <label>Preferred Time</label>
+      <input type="time" id="classTime">
+      <button class="btn outline" onclick="prevStep()">⬅ Back</button>
+      <button class="btn" onclick="sendRequest()">Submit ✅</button>
+    </div>
   </div>
 </div>
 
-<!-- Background tools -->
-<div class="background-tools">
-  <div class="tool ruler"></div>
-  <div class="tool triangle"></div>
-  <div class="tool compass"></div>
-  <div class="tool protractor"></div>
-</div>
-
-<div class="float-tool ruler"></div>
-<div class="float-tool compass"></div>
-<div class="float-tool protractor"></div>
-
-<div class="geo-bg">
-  <div class="geo-shape geo-circle geo-1"></div>
-  <div class="geo-shape geo-square geo-2"></div>
-  <div class="geo-shape geo-triangle geo-3"></div>
-  <div class="geo-shape geo-circle geo-4"></div>
-  <div class="geo-shape geo-square geo-5"></div>
-</div>
-
-<!-- Float tools randomizer -->
-<script>
-document.querySelectorAll(".float-tool").forEach(tool => {
-  tool.style.top = Math.random() * 90 + "%";
-  tool.style.left = Math.random() * 90 + "%";
-  tool.style.animationDuration = Math.floor(Math.random() * 25 + 15) + "s";
-  tool.style.animationDelay = Math.floor(Math.random() * 10) + "s";
-  tool.style.opacity = (Math.random() * 0.4 + 0.5).toFixed(2);
-});
-</script>
-
-<!-- Reveal observer (FIXED) -->
-<script>
-const revealElements = document.querySelectorAll(".reveal");
-
-const revealObserver = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      entry.target.classList.add("show");
-    }
-  });
-}, { threshold: 0.2 });
-
-revealElements.forEach(el => revealObserver.observe(el));
-</script>
-
-<!-- Text reveal (FIXED – no variable conflict) -->
-<script>
-document.querySelectorAll(".reveal-text").forEach(el => {
-  const text = el.textContent;
-  el.textContent = "";
-  [...text].forEach((char, i) => {
-    const span = document.createElement("span");
-    span.textContent = char === " " ? "\u00A0" : char;
-    span.style.transitionDelay = `${i * 0.03}s`;
-    el.appendChild(span);
-  });
-});
-
-const textObserver = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      entry.target.classList.add("active");
-    }
-  });
-}, { threshold: 0.3 });
-
-document.querySelectorAll(".reveal-text").forEach(el => {
-  textObserver.observe(el);
-});
-</script>
-
+<!-- ================= MAIN SCRIPT ================= -->
 <script type="module" src="script.js"></script>
+
 </body>
 </html>
